# AuroraGraph9D

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_LIBRARY.md  append_dataset.py  docker-compose.yml  download_large_file.py  lefthook.yml  prometheus.yml  pyproject.toml  run.py  skills-lock.json  test_output.txt
.agent/skills/mcp-builder/scripts/: evaluation.py
.github/workflows/: ci-publish.yml  publish.yml  tests.yml
code_examples/: README.md  chat_test.py  custom_prompt_test.py  ingest_knowledge.py  minimal_ingest.py  report_time.md  simple_query.py  test_no_info.py
comparison/: compare_rag.py  comparison_result_test.md
docs/: PUBLISHING.md  configuration.md  custom_prompts.md  neo4j_setup.md  proposed_improvements.md  publish_library.md
src/: main.py
src-rust/: lib.rs
src/auragraph/: __init__.py  app.py  cli.py  mcp_server.py
src/auragraph/core/: __init__.py  config.py  engine.py
src/auragraph/db/: __init__.py  base.py  kuzu.py  neo4j.py  sqlite.py
src/auragraph/ingestion/: __init__.py  extractor.py  parsers.py
src/auragraph/providers/: __init__.py
src/auragraph/providers/embeddings/: base.py  fastembed_provider.py  local.py
src/auragraph/providers/llm/: base.py  ollama.py
tests/: __init__.py  benchmark.py  conftest.py  eval_engine.py  golden_dataset.json  ollama_check.py  readme.md  test_api.py  test_auragraph.py  test_engine_unit.py  test_large_scale.py  test_parsers.py
tests/test_docs/: code_patterns.md  history_roman_empire.md  math_reference.md  technical_security.md
userTest/: chat_test.py  ingest_knowledge.py
