[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "AuroraGraph"
version = "0.1.1"
description = "High-Performance Knowledge Graph & Deterministic Reasoning Engine with Rust Core"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "AuroraGraph Contributors" }]
keywords = ["knowledge-graph", "rag", "graphrag", "llm", "nlp", "rust", "neo4j", "kuzu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-dotenv>=1.2.2",
    "prometheus-client>=0.20.0",
    "fastapi>=0.110.0",
    "spacy>=3.8.11",
    "pymupdf>=1.27.1",
    "numpy>=2.0.0",
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/serguei9090/AuroraGraph"
Repository = "https://github.com/serguei9090/AuroraGraph"
"Bug Tracker" = "https://github.com/serguei9090/AuroraGraph/issues"
Changelog = "https://github.com/serguei9090/AuroraGraph/blob/main/CHANGELOG.md"

[project.scripts]
auragraph = "auragraph.cli:main"

[project.optional-dependencies]
# ── Graph Database Backends ────────────────────────────────────────────────────
# Kùzu: embedded property graph, zero Docker (recommended for local production)
kuzu = ["kuzu>=0.11.3"]
# Neo4j: enterprise graph cluster
neo4j = ["neo4j>=6.1.0"]

# ── Embedding Backends ─────────────────────────────────────────────────────────
# FastEmbed: Rust+ONNX, lightweight CPU (~100 MB) — recommended default
fastembed = ["fastembed>=0.4.0"]
# NVIDIA GPU via FastEmbed (CUDA 12+).
#   After installing this extra, ALSO run:
#   pip install onnxruntime-gpu \
#     --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/
cuda = ["fastembed-gpu>=0.4.0"]
# Apple Silicon GPU via CoreML (macOS only)
mps = ["fastembed>=0.4.0"]
# PyTorch + sentence-transformers (CPU/GPU, large ~2 GB)
embeddings = ["sentence-transformers>=5.2.3", "scipy>=1.17.1"]

# ── LLM Providers ──────────────────────────────────────────────────────────────
ollama = ["ollama>=0.6.1"]
openai = ["openai>=1.14.0"]
gemini = ["google-generativeai>=0.4.0"]

# ── Optional Features ──────────────────────────────────────────────────────────
# MCP agent server (Model Context Protocol)
mcp = ["mcp>=1.26.0"]

# ── Full install ───────────────────────────────────────────────────────────────
all = [
    "AuroraGraph[kuzu,neo4j,mcp]",
]

[dependency-groups]
dev = [
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.4",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "maturin>=1.12.6",
    "lefthook>=2.1.2",
]

[tool.maturin]
# python-source tells Maturin where the pure-Python package lives
python-source = "src"
# module-name must match the package namespace so the .pyd/.so
# is placed inside auragraph/ rather than at the top-level
module-name = "auragraph.auragraph_core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v -m 'not evaluation'"
markers = [
    "evaluation: marks tests as evaluation tests that require LLM (slow) and should be run on-demand",
]

